--- a/index.html
+++ b/index.html
@@ -10,7 +10,291 @@
   <meta property="og:type" content="website" />
   <meta property="og:image" content="/og-image.png" />
   <link rel="icon" href="/favicon.png">
-  <style>/* styles omitted here for brevity in this cell; content identical to previous step */</style>
+  <style>
+    :root{
+      --bg:#fafafa;
+      --card:#ffffff;
+      --ink:#1f2937;
+      --muted:#6b7280;
+      --brand:#0ea5a4;
+      --accent:#111827;
+      --ring:#e5e7eb;
+      --ok:#16a34a;
+      --warn:#9a3412;
+      --warnbg:#fff7ed;
+    }
+    *{box-sizing:border-box}
+    html,body{margin:0;padding:0;background:var(--bg);color:var(--ink);font-family: system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,sans-serif;line-height:1.55}
+    a{color:var(--brand);text-decoration: none}
+    a:hover{text-decoration: underline}
+    .container{max-width:1000px;margin:0 auto;padding:24px}
+    header.site{
+      position:sticky;top:0;z-index:50;background:rgba(250,250,250,.9);backdrop-filter: blur(6px);
+      border-bottom:1px solid var(--ring);
+    }
+    .site-inner{display:flex;align-items:center;gap:20px;justify-content:space-between}
+    .brand{display:flex;align-items:center;gap:12px}
+    .logo{width:36px;height:36px;border-radius:50%;background:#fff;border:1px solid var(--ring);display:grid;place-items:center;font-weight:700;color:var(--accent)}
+    nav a{margin:0 8px;color:var(--ink);font-weight:600}
+    nav a:hover{color:var(--brand)}
+    .hero{background:linear-gradient(180deg,#ffffff, #f4f7f7 60%, #f9fbfb);border-bottom:1px solid var(--ring)}
+    .hero .container{padding:48px 24px}
+    h1{font-size:clamp(28px,4.5vw,44px);line-height:1.15;margin:.2em 0 .25em}
+    .lead{font-size:clamp(16px,2.2vw,18px);color:var(--muted);max-width:72ch}
+    .cta{display:flex;flex-wrap:wrap;gap:12px;margin-top:18px}
+    .btn{
+      appearance:none;border:none;border-radius:12px;padding:12px 16px;font-weight:700;cursor:pointer;
+      box-shadow:0 1px 2px rgba(0,0,0,.05);transition:.2s background, .2s transform;
+    }
+    .btn-primary{background:var(--brand);color:white}
+    .btn-primary:hover{transform:translateY(-1px);filter:brightness(1.02)}
+    .btn-muted{background:#eef6f6;color:#0b6d6b}
+    section{padding:36px 0}
+    .card{background:var(--card);border:1px solid var(--ring);border-radius:16px;padding:20px}
+    h2{font-size:clamp(22px,3.2vw,30px);margin:.1em 0 .6em}
+    h3{font-size:clamp(18px,2.6vw,22px);margin:1.2em 0 .4em}
+    ul{padding-left:1.25rem}
+    .grid{display:grid;gap:16px}
+    @media (min-width:860px){ .grid-3{grid-template-columns:repeat(3,1fr)} .grid-2{grid-template-columns:repeat(2,1fr)}}
+    .badge{display:inline-flex;align-items:center;gap:8px;background:#fff;border:1px solid var(--ring);border-radius:999px;padding:6px 10px;font-size:.9rem}
+    .promo{background:#fff7ed;border:1px dashed #fdba74;color:#9a3412;border-radius:12px;padding:10px 12px;display:inline-flex;gap:10px;align-items:center;margin-top:10px}
+    details{background:var(--card);border:1px solid var(--ring);border-radius:12px;padding:12px;margin:10px 0}
+    details[open]{box-shadow:0 2px 10px rgba(0,0,0,.04)}
+    summary{cursor:pointer;font-weight:700}
+    .muted{color:var(--muted)}
+    .foot{font-size:.9rem;color:var(--muted);border-top:1px solid var(--ring);padding:24px 0}
+    .price-tag{font-size:28px;font-weight:800}
+    .chip{display:inline-block;background:#eef2ff;color:#3730a3;padding:2px 10px;border-radius:999px;border:1px solid #c7d2fe;font-weight:700;font-size:.85rem}
+    .mono{font-family: ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace}
+    .box{border:1px solid var(--ring);border-radius:12px;padding:14px;background:#fff}
+    .copybox{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
+    .copybtn{border:1px solid var(--ring);background:#fff;border-radius:8px;padding:6px 10px;cursor:pointer}
+    .ok{color:var(--ok);font-weight:700}
+    .opinion{font-style:italic}
+  </style>
 </head>
-<body>Strona zostanie wgrana tutaj po commit.</body>
+<body>
+  <header class="site">
+    <div class="container site-inner">
+      <div class="brand">
+        <div class="logo">PNF</div>
+        <div>
+          <strong>Pediatra na fali</strong><br>
+          <span class="muted" style="font-size:.9rem">Materiały do PES (pediatria)</span>
+        </div>
+      </div>
+      <nav>
+        <a href="#start">Start</a>
+        <a href="#autorzy">Autorzy</a>
+        <a href="#zestaw">Co wchodzi</a>
+        <a href="#nowe">Nowości</a>
+        <a href="#zawartosc">Zawartość</a>
+        <a href="#cennik">Cennik</a>
+        <a href="#zamowienie">Zamów</a>
+        <a href="#opinie">Opinie</a>
+        <a href="#faq">FAQ</a>
+        <a href="#kontakt">Kontakt</a>
+      </nav>
+    </div>
+  </header>
+
+  <main id="start" class="hero">
+    <div class="container">
+      <div class="badge">📅 Wiosna 2026 <span class="chip">PES pediatria</span></div>
+      <h1>Materiały do PES — Notatki • Testy • Aplikacja</h1>
+      <p class="lead">1680 opracowanych pytań CEM (2019–2025) z komentarzami. Aktualizacje co pół roku. Komplet: Notatki (~750 s.), Testy (~650 s.), Aplikacja (5 mies. dostępu).</p>
+      <div class="promo">💥 Black Week: <strong>Komplet 649 zł</strong> do 30.11.2025 (zamiast 699 zł)</div>
+      <div class="cta">
+        <a class="btn btn-primary" href="https://example.com/formularz" target="_blank" rel="noopener">Zamów komplet</a>
+        <a class="btn btn-muted" href="#zawartosc">Zobacz zawartość</a>
+      </div>
+    </div>
+  </main>
+
+  <section id="autorzy">
+    <div class="container grid grid-2">
+      <div class="card">
+        <h2>O autorach materiałów</h2>
+        <p>Nazywam się <strong>Marta Drażniuk-Warchoł</strong>. Moje materiały powstały jesienią 2021 roku, kiedy sama przystępowałam do egzaminu z pediatrii. Podczas nauki stworzyłam pierwszą wersję Notatek i Testów.</p>
+        <p>W 2023 roku dołączyła do mnie szwagierka, <strong>Aleksandra Warchoł</strong>, z którą opracowałyśmy opublikowane wówczas przez CEM pytania egzaminacyjne. Od tego czasu, co pół roku, aktualizujemy je w Testach oraz Aplikacji, tak żeby były zgodne z najnowszymi wytycznymi i wiedzą. Obie jesteśmy lekarkami w Uniwersyteckim Szpitalu Dziecięcym w Krakowie.</p>
+        <p class="muted">Dziś to 9. edycja — z materiałów skorzystało już ok. 800 lekarzy.</p>
+      </div>
+      <div class="card">
+        <h3>Co wchodzi w skład?</h3>
+        <ul>
+          <li><strong>Notatki</strong></li>
+          <li><strong>Testy</strong></li>
+          <li><strong>Dostęp do aplikacji webowej</strong></li>
+        </ul>
+        <h3 id="nowe">Co nowego?</h3>
+        <ul>
+          <li>Opracowane pytania z egzaminu <strong>jesień 2025</strong> w Testach i Aplikacji,</li>
+          <li>Zaktualizowana część Notatek w oparciu o nowe wydanie <em>Pediatrii Kawalec</em>.</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <section id="zawartosc">
+    <div class="container">
+      <h2>Zawartość materiałów</h2>
+      <div class="grid grid-3">
+        <div class="card">
+          <h3>Notatki</h3>
+          <p>Praca przygotowana w oparciu o:</p>
+          <ul>
+            <li><em>Pediatria Tom 1 i Tom 2</em> (Kawalec/Grenda/Kulus, 2019)</li>
+            <li>Porównanie i aktualizacja (wyd. 2024): neonatologia, pulmonologia, choroby zakaźne, reumatologia, gastroenterologia, onkologia, hematologia, otolaryngologia — <em>pozostałe rozdziały w opracowaniu</em>.</li>
+            <li>Rekomendacje postępowania: ZOMR (2011), zakażenia układu oddechowego (2016)</li>
+            <li><em>Pediatria, tom 1–3</em> (Pietrzyk/Kwinta) — Hematologia</li>
+            <li><em>Żywienie…</em> (Szajewska/Horvath, 2017): karmienie piersią, mieszanki, rozszerzanie diety, suplementacja</li>
+            <li>PTGHiŻD (2021): Zasady żywienia zdrowych niemowląt</li>
+          </ul>
+          <details>
+            <summary>Dodatkowo</summary>
+            <ul>
+              <li>Rozwiązane pytania do sesji <strong>wiosna 2017</strong> włącznie (przypisane do działów)</li>
+              <li>Rozdział „Szczepienia” — tabele, kalendarz</li>
+              <li>Źródła: PSO 2025 (MZ), prezentacje prof. Teresy Jackowskiej, ChPL, „Szczepienia w pytaniach i odpowiedziach” (Czajka/Wysocki, 2023), wytyczne dot. nadrabiania szczepień (2020)</li>
+              <li>Lista książek/art. i wytycznych do przerobienia</li>
+              <li>Kilka rad dot. skutecznej nauki</li>
+            </ul>
+          </details>
+        </div>
+        <div class="card">
+          <h3>Testy</h3>
+          <ul>
+            <li><strong>1680</strong> opracowanych pytań (2019–2025)</li>
+            <li>Pytania opublikowane przez CEM</li>
+            <li>Pod każdym pytaniem <strong>komentarz</strong> i krótka notatka (źródła do egzaminu)</li>
+            <li>Prawidłowa odpowiedź pod pytaniem (możliwa praca „na czysto”)</li>
+            <li>Dodatkowo: lista literatury, wskazówki do nauki</li>
+          </ul>
+        </div>
+        <div class="card">
+          <h3>Aplikacja</h3>
+          <ul>
+            <li><strong>1680</strong> pytań (2019–2025) z komentarzami</li>
+            <li>Filtrowanie po latach, działach i zagadnieniach</li>
+            <li>Wyszukiwarka, własne testy, oznaczanie przerobionych pytań</li>
+            <li>Dodawanie własnych notatek</li>
+            <li>Dostęp indywidualny na <strong>5 miesięcy</strong></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="grid grid-3" style="margin-top:16px">
+        <div class="box">
+          <h3>Jak wyglądają materiały?</h3>
+          <ul>
+            <li>Notatki — <em>zobacz przykładowy fragment</em></li>
+            <li>Testy — <em>zobacz przykładowy fragment</em></li>
+            <li>Aplikacja — <em>przetestuj wersję demo</em></li>
+          </ul>
+          <p class="muted">* Linki demo można podpiąć później.</p>
+        </div>
+        <div class="box">
+          <h3 id="cennik">Cennik</h3>
+          <p><span class="price-tag">649 zł</span> <span class="muted">Komplet (promocja Black Week do 30.11.2025, potem 699 zł)</span></p>
+          <ul>
+            <li>Notatki (~750 stron) — 349 zł</li>
+            <li>Testy (~650 stron) — 300 zł</li>
+            <li>Aplikacja — 300 zł</li>
+          </ul>
+          <p class="muted">Ceny zawierają koszt wydruku i wysyłki. Wystawiamy fakturę. Stali klienci: 10% zniżki.</p>
+        </div>
+        <div class="box">
+          <h3>Terminy</h3>
+          <ul>
+            <li>Dostawa druków do paczkomatu do <strong>31.12.2025</strong></li>
+            <li>Dane logowania do aplikacji mailem do <strong>14.12.2025</strong></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="zamowienie">
+    <div class="container">
+      <h2>Jak dokonać zamówienia?</h2>
+      <ol>
+        <li>Wypełnij formularz (dokładne dane, adres zamieszkania, numer paczkomatu, login do aplikacji, dane do faktury, wybór opcji zamówienia).</li>
+        <li>Wykonaj przelew na podany numer konta, w tytule podając <em>imię i nazwisko</em> oraz co zamawiasz (np. „Komplet”).</li>
+      </ol>
+      <div class="card">
+        <h3>Dane do przelewu</h3>
+        <div class="grid grid-2">
+          <div>
+            <p><strong>Nazwa odbiorcy:</strong><br>
+            Marta Drażniuk-Warchoł <span class="muted">Pediatra na fali</span></p>
+            <p class="copybox"><strong>Numer konta (PLN):</strong>
+              <span class="mono" id="iban">80 1050 1139 1000 0097 5660 7959</span>
+              <button class="copybtn" onclick="copyIBAN()">Kopiuj</button>
+              <span id="copied" class="ok" style="display:none">Skopiowano ✅</span>
+            </p>
+            <p><strong>Tytuł przelewu:</strong> Imię i nazwisko + rodzaj zamówienia (np. „Komplet”)</p>
+          </div>
+          <div>
+            <p><strong>Po zleceniu przelewu</strong> wyślij potwierdzenie oraz wypełniony formularz zamówienia.</p>
+            <p class="muted">* Jeśli potrzebujesz faktury imiennej/firmowej — podaj dane w formularzu.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="opinie">
+    <div class="container">
+      <h2>Opinie</h2>
+      <div class="grid grid-3">
+        <div class="card opinion">„Aplikacja uratowała końcówkę przygotowań.” — Anna, Kraków</div>
+        <div class="card opinion">„Komentarze pod pytaniami to złoto.” — Michał</div>
+        <div class="card opinion">„Notatki zwięzłe, a kompletne.” — Ola</div>
+      </div>
+      <p class="muted" style="margin-top:8px">Wyślij mi 3–6 swoich cytatów — wstawię je tu na stałe.</p>
+    </div>
+  </section>
+
+  <section id="faq">
+    <div class="container">
+      <h2>FAQ</h2>
+      <details><summary>Czy materiały obejmują pytania CEM?</summary>
+        <p>Tak — 1680 pytań z lat 2019–2025, z komentarzami i źródłami.</p>
+      </details>
+      <details><summary>Co wchodzi w Komplet?</summary>
+        <p>Notatki (~750 s.), Testy (~650 s.), Aplikacja (5 mies.).</p>
+      </details>
+      <details><summary>Kiedy dostawa i dostęp do apki?</summary>
+        <p>Druki do paczkomatu do 31.12.2025, dostęp do aplikacji do 14.12.2025.</p>
+      </details>
+    </div>
+  </section>
+
+  <section id="kontakt">
+    <div class="container">
+      <h2>Kontakt</h2>
+      <div class="card">
+        <p>W razie pytań pisz śmiało na e-mail: <a href="mailto:martadrazniuk@gmail.com">martadrazniuk@gmail.com</a></p>
+        <p class="muted">Możesz też napisać do nas na Facebooku — odpowiadamy na wiadomości prywatne.</p>
+      </div>
+    </div>
+  </section>
+
+  <div class="container foot">
+    <div>Pediatra na fali • &copy; 2025 • Strona informacyjna</div>
+  </div>
+
+  <script>
+    function copyIBAN(){
+      const el = document.createElement('textarea');
+      el.value = '80105011391000009756607959';
+      document.body.appendChild(el);
+      el.select(); el.setSelectionRange(0, 99999);
+      try{ document.execCommand('copy'); }catch(e){}
+      document.body.removeChild(el);
+      document.getElementById('copied').style.display='inline';
+      setTimeout(()=>{document.getElementById('copied').style.display='none'}, 1800);
+    }
+  </script>
+</body>
 </html>
