--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
   <meta property="og:image" content="og-image.png" />
   <link rel="icon" href="favicon.png">
   <style>
-    :root{--bg:#fafafa;--card:#ffffff;--ink:#1f2937;--muted:#6b7280;--brand:#0ea5a4;--accent:#111827;--ring:#e5e7eb}
+    :root{
+      --bg:#fafafa; --card:#ffffff; --ink:#1f2937; --muted:#6b7280;
+      --brand:#0ea5a4; --accent:#111827; --ring:#e5e7eb; --ok:#16a34a;
+    }
     *{box-sizing:border-box}
     html,body{margin:0;padding:0;background:var(--bg);color:var(--ink);font-family: system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,sans-serif;line-height:1.55}
     a{color:var(--brand);text-decoration: none}
@@ -42,16 +45,17 @@
     .badge{display:inline-flex;align-items:center;gap:8px;background:#fff;border:1px solid var(--ring);border-radius:999px;padding:6px 10px;font-size:.9rem}
     .promo{background:#fff7ed;border:1px dashed #fdba74;color:#9a3412;border-radius:12px;padding:10px 12px;display:inline-flex;gap:10px;align-items:center;margin-top:10px}
     details{background:var(--card);border:1px solid var(--ring);border-radius:12px;padding:12px;margin:10px 0}
+    details[open]{box-shadow:0 2px 10px rgba(0,0,0,.04)}
     summary{cursor:pointer;font-weight:700}
     .muted{color:var(--muted)}
     .foot{font-size:.9rem;color:var(--muted);border-top:1px solid var(--ring);padding:24px 0}
     .price-tag{font-size:28px;font-weight:800}
     .chip{display:inline-block;background:#eef2ff;color:#3730a3;padding:2px 10px;border-radius:999px;border:1px solid #c7d2fe;font-weight:700;font-size:.85rem}
-    .mono{font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace}
+    .mono{font-family: ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace}
     .box{border:1px solid var(--ring);border-radius:12px;padding:14px;background:#fff}
     .copybox{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
     .copybtn{border:1px solid var(--ring);background:#fff;border-radius:8px;padding:6px 10px;cursor:pointer}
-    .ok{color:#16a34a;font-weight:700}
+    .ok{color:var(--ok);font-weight:700}
     .opinion{font-style:italic}
   </style>
 </head>
@@ -90,6 +94,191 @@
       </div>
     </div>
   </main>
-  <!-- reszta treści zostaje identyczna jak w poprzedniej wersji (skrócone w tym pliku) -->
+
+  <section id="autorzy">
+    <div class="container grid grid-2">
+      <div class="card">
+        <h2>O autorach materiałów</h2>
+        <p>Nazywam się <strong>Marta Drażniuk-Warchoł</strong>. Moje materiały powstały jesienią 2021 roku, kiedy sama przystępowałam do egzaminu z pediatrii. Podczas nauki stworzyłam pierwszą wersję Notatek i Testów.</p>
+        <p>W 2023 roku dołączyła do mnie szwagierka, <strong>Aleksandra Warchoł</strong>, z którą opracowałyśmy opublikowane wówczas przez CEM pytania egzaminacyjne. Od tego czasu, co pół roku, aktualizujemy je w Testach oraz Aplikacji, tak żeby były zgodne z najnowszymi wytycznymi i wiedzą. Obie jesteśmy lekarkami w Uniwersyteckim Szpitalu Dziecięcym w Krakowie.</p>
+        <p class="muted">Dziś to 9. edycja — z materiałów skorzystało już ok. 800 lekarzy.</p>
+      </div>
+      <div class="card">
+        <h3>Co wchodzi w skład?</h3>
+        <ul>
+          <li><strong>Notatki</strong></li>
+          <li><strong>Testy</strong></li>
+          <li><strong>Dostęp do aplikacji webowej</strong></li>
+        </ul>
+        <h3 id="nowe">Co nowego?</h3>
+        <ul>
+          <li>Opracowane pytania z egzaminu <strong>jesień 2025</strong> w Testach i Aplikacji,</li>
+          <li>Zaktualizowana część Notatek w oparciu o nowe wydanie <em>Pediatrii Kawalec</em>.</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <section id="zawartosc">
+    <div class="container">
+      <h2>Zawartość materiałów</h2>
+      <div class="grid grid-3">
+        <div class="card">
+          <h3>Notatki</h3>
+          <p>Praca przygotowana w oparciu o:</p>
+          <ul>
+            <li><em>Pediatria Tom 1 i Tom 2</em> (Kawalec/Grenda/Kulus, 2019)</li>
+            <li>Porównanie i aktualizacja (wyd. 2024): neonatologia, pulmonologia, choroby zakaźne, reumatologia, gastroenterologia, onkologia, hematologia, otolaryngologia — <em>pozostałe rozdziały w opracowaniu</em>.</li>
+            <li>Rekomendacje postępowania: ZOMR (2011), zakażenia układu oddechowego (2016)</li>
+            <li><em>Pediatria, tom 1–3</em> (Pietrzyk/Kwinta) — Hematologia</li>
+            <li><em>Żywienie…</em> (Szajewska/Horvath, 2017): karmienie piersią, mieszanki, rozszerzanie diety, suplementacja</li>
+            <li>PTGHiŻD (2021): Zasady żywienia zdrowych niemowląt</li>
+          </ul>
+          <details>
+            <summary>Dodatkowo</summary>
+            <ul>
+              <li>Rozwiązane pytania do sesji <strong>wiosna 2017</strong> włącznie (przypisane do działów)</li>
+              <li>Rozdział „Szczepienia” — tabele, kalendarz</li>
+              <li>Źródła: PSO 2025 (MZ), prezentacje prof. Teresy Jackowskiej, ChPL, „Szczepienia w pytaniach i odpowiedziach” (Czajka/Wysocki, 2023), wytyczne dot. nadrabiania szczepień (2020)</li>
+              <li>Lista książek/art. i wytycznych do przerobienia</li>
+              <li>Kilka rad dot. skutecznej nauki</li>
+            </ul>
+          </details>
+        </div>
+        <div class="card">
+          <h3>Testy</h3>
+          <ul>
+            <li><strong>1680</strong> opracowanych pytań (2019–2025)</li>
+            <li>Pytania opublikowane przez CEM</li>
+            <li>Pod każdym pytaniem <strong>komentarz</strong> i krótka notatka (źródła do egzaminu)</li>
+            <li>Prawidłowa odpowiedź pod pytaniem (możliwa praca „na czysto”)</li>
+            <li>Dodatkowo: lista literatury, wskazówki do nauki</li>
+          </ul>
+        </div>
+        <div class="card">
+          <h3>Aplikacja</h3>
+          <ul>
+            <li><strong>1680</strong> pytań (2019–2025) z komentarzami</li>
+            <li>Filtrowanie po latach, działach i zagadnieniach</li>
+            <li>Wyszukiwarka, własne testy, oznaczanie przerobionych pytań</li>
+            <li>Dodawanie własnych notatek</li>
+            <li>Dostęp indywidualny na <strong>5 miesięcy</strong></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="grid grid-3" style="margin-top:16px">
+        <div class="box">
+          <h3>Jak wyglądają materiały?</h3>
+          <ul>
+            <li>Notatki — <em>zobacz przykładowy fragment</em></li>
+            <li>Testy — <em>zobacz przykładowy fragment</em></li>
+            <li>Aplikacja — <em>przetestuj wersję demo</em></li>
+          </ul>
+          <p class="muted">* Linki demo można podpiąć później.</p>
+        </div>
+        <div class="box">
+          <h3 id="cennik">Cennik</h3>
+          <p><span class="price-tag">649 zł</span> <span class="muted">Komplet (promocja Black Week do 30.11.2025, potem 699 zł)</span></p>
+          <ul>
+            <li>Notatki (~750 stron) — 349 zł</li>
+            <li>Testy (~650 stron) — 300 zł</li>
+            <li>Aplikacja — 300 zł</li>
+          </ul>
+          <p class="muted">Ceny zawierają koszt wydruku i wysyłki. Wystawiamy fakturę. Stali klienci: 10% zniżki.</p>
+        </div>
+        <div class="box">
+          <h3>Terminy</h3>
+          <ul>
+            <li>Dostawa druków do paczkomatu do <strong>31.12.2025</strong></li>
+            <li>Dane logowania do aplikacji mailem do <strong>14.12.2025</strong></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="zamowienie">
+    <div class="container">
+      <h2>Jak dokonać zamówienia?</h2>
+      <ol>
+        <li>Wypełnij formularz (dokładne dane, adres zamieszkania, numer paczkomatu, login do aplikacji, dane do faktury, wybór opcji zamówienia).</li>
+        <li>Wykonaj przelew na podany numer konta, w tytule podając <em>imię i nazwisko</em> oraz co zamawiasz (np. „Komplet”).</li>
+      </ol>
+      <div class="card">
+        <h3>Dane do przelewu</h3>
+        <div class="grid grid-2">
+          <div>
+            <p><strong>Nazwa odbiorcy:</strong><br>
+            Marta Drażniuk-Warchoł <span class="muted">Pediatra na fali</span></p>
+            <p class="copybox"><strong>Numer konta (PLN):</strong>
+              <span class="mono" id="iban">80 1050 1139 1000 0097 5660 7959</span>
+              <button class="copybtn" onclick="copyIBAN()">Kopiuj</button>
+              <span id="copied" class="ok" style="display:none">Skopiowano ✅</span>
+            </p>
+            <p><strong>Tytuł przelewu:</strong> Imię i nazwisko + rodzaj zamówienia (np. „Komplet”)</p>
+          </div>
+          <div>
+            <p><strong>Po zleceniu przelewu</strong> wyślij potwierdzenie oraz wypełniony formularz zamówienia.</p>
+            <p class="muted">* Jeśli potrzebujesz faktury imiennej/firmowej — podaj dane w formularzu.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="opinie">
+    <div class="container">
+      <h2>Opinie</h2>
+      <div class="grid grid-3">
+        <div class="card opinion">„Aplikacja uratowała końcówkę przygotowań.” — Anna, Kraków</div>
+        <div class="card opinion">„Komentarze pod pytaniami to złoto.” — Michał</div>
+        <div class="card opinion">„Notatki zwięzłe, a kompletne.” — Ola</div>
+      </div>
+    </div>
+  </section>
+
+  <section id="faq">
+    <div class="container">
+      <h2>FAQ</h2>
+      <details><summary>Czy materiały obejmują pytania CEM?</summary>
+        <p>Tak — 1680 pytań z lat 2019–2025, z komentarzami i źródłami.</p>
+      </details>
+      <details><summary>Co wchodzi w Komplet?</summary>
+        <p>Notatki (~750 s.), Testy (~650 s.), Aplikacja (5 mies.).</p>
+      </details>
+      <details><summary>Kiedy dostawa i dostęp do apki?</summary>
+        <p>Druki do paczkomatu do 31.12.2025, dostęp do aplikacji do 14.12.2025.</p>
+      </details>
+    </div>
+  </section>
+
+  <section id="kontakt">
+    <div class="container">
+      <h2>Kontakt</h2>
+      <div class="card">
+        <p>W razie pytań pisz śmiało na e-mail: <a href="mailto:martadrazniuk@gmail.com">martadrazniuk@gmail.com</a></p>
+        <p class="muted">Możesz też napisać do nas na Facebooku — odpowiadamy na wiadomości prywatne.</p>
+      </div>
+    </div>
+  </section>
+
+  <div class="container foot">
+    <div>Pediatra na fali • &copy; 2025 • Strona informacyjna</div>
+  </div>
+
+  <script>
+    function copyIBAN(){
+      const el = document.createElement('textarea');
+      el.value = '80105011391000009756607959';
+      document.body.appendChild(el);
+      el.select(); el.setSelectionRange(0, 99999);
+      try{ document.execCommand('copy'); }catch(e){}
+      document.body.removeChild(el);
+      const ok = document.createElement('span'); ok.textContent=' Skopiowano ✅'; ok.style.color='#16a34a'; 
+      event.target.insertAdjacentElement('afterend', ok);
+      setTimeout(()=>{ ok.remove() }, 1600);
+    }
+  </script>
 </body>
 </html>
