--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <main id="start" class="hero">
     <div class="container">
       <div class="badge">📅 Wiosna 2026 <span class="chip">PES pediatria</span></div>
-      <h1>Materiały do PES - Notatki - Testy - Aplikacja</h1>
+      <h1>Materiały do PES Notatki • Testy • Aplikacja</h1>
       <p class="lead">1680 opracowanych pytań CEM (2019-2025) z komentarzami. Aktualizacje co pół roku. Komplet: Notatki (~750 s.), Testy (~650 s.), Aplikacja (5 mies. dostępu).</p>
       <div class="promo">💥 Black Week: <strong>Komplet 649 zł</strong> do 30.11.2025 (zamiast 699 zł)</div>
       <div class="cta">
