--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
     <div class="container">
       <div class="badge">📅 Wiosna 2026 <span class="chip">PES pediatria</span></div>
      <h1>Materiały do PES</h1>
-<p class="subline">Notatki • Testy • Aplikacja</p>
+<p class="subline" style="font-size:clamp(20px,2.8vw,28px); font-weight:700; color:var(--ink); margin:.25rem 0 .3rem; letter-spacing:.2px;">
+  Notatki • Testy • Aplikacja
+</p>
       <p class="lead">1680 opracowanych pytań CEM (2019-2025) z komentarzami. Aktualizacje co pół roku. Komplet: Notatki (~750 s.), Testy (~650 s.), Aplikacja (5 mies. dostępu).</p>
       <div class="promo">💥 Black Week: <strong>Komplet 649 zł</strong> do 30.11.2025 (zamiast 699 zł)</div>
       <div class="cta">
