--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <p class="lead">1680 opracowanych pytań CEM (2019-2025) z komentarzami. Aktualizacje co pół roku. Komplet: Notatki (~750 s.), Testy (~650 s.), Aplikacja (5 mies. dostępu).</p>
       <div class="promo">💥 Black Week: <strong>Komplet 649 zł</strong> do 30.11.2025 (zamiast 699 zł)</div>
       <div class="cta">
-        <a class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSdYGhyPVrAqxpmZJl9NBRmoEhrczXGEOedfcmXftBmZujKsMQ/viewform" target="_blank" rel="noopener">Zamów komplet</a>
+        <a class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSdYGhyPVrAqxpmZJl9NBRmoEhrczXGEOedfcmXftBmZujKsMQ/viewform" target="_blank" rel="noopener">Zamów</a>
       </div>
     </div>
   </main>
