--- a/index.html
+++ b/index.html
@@ -245,9 +245,12 @@
     <div class="container">
       <h2>Kontakt</h2>
       <div class="card">
-        <p>W razie pytań pisz śmiało na e-mail: <a href="mailto:martadrazniuk@gmail.com">martadrazniuk@gmail.com</a></p>
-        <p class="muted">Możesz też napisać do nas na Facebooku - odpowiadamy na wiadomości prywatne.</p>
-      </div>
+  <p>W razie pytań pisz: <a href="mailto:martadrazniuk@gmail.com">martadrazniuk@gmail.com</a></p>
+  <p>Aktualności i wiadomości: 
+    <a href="https://www.facebook.com/TWOJA_STRONA" target="_blank" rel="noopener">Facebook — Pediatra na fali</a>
+  </p>
+  <p class="muted">Najwygodniej: przez stronę FB lub e-mail.</p>
+</div>
     </div>
   </section>
 
