--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
       <div class="card">
   <p>W razie pytań pisz: <a href="mailto:martadrazniuk@gmail.com">martadrazniuk@gmail.com</a></p>
   <p>Aktualności i wiadomości: 
-    <a href="https://www.facebook.com/TWOJA_STRONA" target="_blank" rel="noopener">Facebook — Pediatra na fali</a>
+    <a href="https://www.facebook.com/TWOJA_STRONA" target="_blank" rel="noopener">Facebook Notatki Marty </a>
   </p>
   <p class="muted">Najwygodniej: przez stronę FB lub e-mail.</p>
 </div>
