--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
   Notatki • Testy • Aplikacja
 </p>
       <p class="lead">1680 opracowanych pytań CEM (2019-2025) z komentarzami. Aktualizacje co pół roku. Komplet: Notatki (~750 s.), Testy (~650 s.), Aplikacja (5 mies. dostępu).</p>
-      <div class="promo">💥 Black Week: <strong>Komplet 649 zł</strong> do 30.11.2025 (zamiast 699 zł)</div>
-      <div class="cta">
+            <div class="cta">
         <a class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSdYGhyPVrAqxpmZJl9NBRmoEhrczXGEOedfcmXftBmZujKsMQ/viewform" target="_blank" rel="noopener">Zamów</a>
       </div>
     </div>
@@ -178,7 +177,7 @@
         </div>
         <div class="box">
           <h3 id="cennik">Cennik</h3>
-          <p><span class="price-tag">649 zł</span> <span class="muted">Komplet (promocja Black Week do 30.11.2025, potem 699 zł)</span></p>
+         <p><span class="price-tag">699 zł</span> <span class="muted">Komplet: Notatki + Testy + Aplikacja</span></p>
           <ul>
             <li>Notatki (~750 stron) - 349 zł</li>
             <li>Testy (~650 stron) - 300 zł</li>
