--- a/index.html
+++ b/index.html
@@ -265,14 +265,14 @@
 
       <!-- 2) Sami -->
       <div class="testi">
-        <p class="q"><span class="quote-mark">❝</span>Materiały okazały się bardzo pomocne — dzięki nim pomyślnie
+        <p class="q"><span class="quote-mark">❝</span>Materiały okazały się bardzo pomocne-dzięki nim pomyślnie
         zdałem egzamin PES. Dziękuję i życzę dalszych sukcesów! (Strona polajkowana 😊)</p>
         <div class="author">Sami</div>
       </div>
 
       <!-- 3) Marcin -->
       <div class="testi">
-        <p class="q"><span class="quote-mark">❝</span>Zdawałem 2 lata temu — <strong>Twoje materiały były absolutnie nieocenione</strong>
+        <p class="q"><span class="quote-mark">❝</span>Zdawałem 2 lata temu-<strong>Twoje materiały były absolutnie nieocenione</strong>
         i polecam je wszystkim młodszym kolegom. Dzięki!</p>
         <div class="author">Marcin</div>
       </div>
@@ -280,19 +280,18 @@
 
     <!-- 4) Dłuższa opinia: Łukasz -->
     <div class="card" style="margin-top:16px">
-      <p class="q"><span class="quote-mark">❝</span><strong>Notatki</strong> — mistrzowski wyciąg pod egzamin,
-      idealne jako ostatnia powtórka. <strong>Aplikacja</strong> — komentarze pod pytaniami świetnie rozszerzają temat.</p>
+      <p class="q"><span class="quote-mark">❝</span><strong>Notatki</strong>-mistrzowski wyciąg pod egzamin,
+      idealne jako ostatnia powtórka. <strong>Aplikacja</strong>-komentarze pod pytaniami świetnie rozszerzają temat.</p>
       <div class="author">Łukasz</div>
       <details>
         <summary>Pokaż pełną opinię</summary>
-        <p>Notatki – super robota (wskazówka: przy chorobie Gilberta warto zaznaczyć dziedziczenie recesywne).
-        To, że do każdego działu są wyselekcjonowane pytania z merytorycznymi wstawkami – bajka.
-        Aplikacja – naprawdę „pozamiatała”: same pytania to jedno, ale <em>dobrze dopasowany</em> komentarz pod każdym
+        <p>Notatki-super robota.
+        To, że do każdego działu są wyselekcjonowane pytania z merytorycznymi wstawkami-bajka.
+        Aplikacja-naprawdę „pozamiatała”: same pytania to jedno, ale <em>dobrze dopasowany</em> komentarz pod każdym
         robi największą różnicę. Za testy wziąłem się na 10 dni przed i pykło 80%.
-        Konkluzja: świetna robota, cena jak na wartość – bardzo fair. Będę polecać i trzymam kciuki za rozwój.</p>
+        Konkluzja: świetna robota, cena jak na wartość-bardzo fair. Będę polecać i trzymam kciuki za rozwój.</p>
       </details>
-      <p class="meta">*Dłuższa wypowiedź skrócona do najważniejszych fragmentów.</p>
-    </div>
+          </div>
   </div>
 </section>
 
