--- a/index.html
+++ b/index.html
@@ -100,10 +100,7 @@
       <p class="lead">1680 opracowanych pytań CEM (2019-2025) z komentarzami. Aktualizacje co pół roku. Komplet: Notatki (~750 s.), Testy (~650 s.), Aplikacja (5 mies. dostępu).</p>
             <div class="cta">
         <a class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSdYGhyPVrAqxpmZJl9NBRmoEhrczXGEOedfcmXftBmZujKsMQ/viewform" target="_blank" rel="noopener">Zamów</a>
-      </div>
-    </div>
-  </main>
-
+      </div>     </div>   </main>
   <section id="autorzy">
     <div class="container grid grid-2">
       <div class="card">
@@ -127,7 +124,6 @@
       </div>
     </div>
   </section>
-
   <section id="zawartosc">
     <div class="container">
       <h2>Zawartość materiałów</h2>
@@ -175,7 +171,6 @@
           </ul>
         </div>
       </div>
-
       <div class="grid grid-3" style="margin-top:16px">
         <div class="box">
           <h3>Jak wyglądają materiały?</h3>
@@ -205,7 +200,6 @@
       </div>
     </div>
   </section>
-
   <section id="zamowienie">
     <div class="container">
       <h2>Jak dokonać zamówienia?</h2>
@@ -234,7 +228,6 @@
       </div>
     </div>
   </section>
-
   <section id="faq">
     <div class="container">
       <h2>FAQ</h2>
@@ -253,7 +246,6 @@
   <div class="container">
     <h2>Opinie lekarzy</h2>
     <p class="opinie-sub">Wybrane wiadomości od osób, które korzystały z Notatek, Testów i Aplikacji.</p>
-
     <div class="testi-grid">
       <!-- 1) Anna -->
       <div class="testi">
@@ -262,7 +254,7 @@
         Z pytań testowych też korzystałam.</p>
         <div class="author">Anna</div>
       </div>
-
+      
       <!-- 2) Sami -->
       <div class="testi">
         <p class="q"><span class="quote-mark">❝</span>Materiały okazały się bardzo pomocne-dzięki nim pomyślnie
@@ -294,8 +286,6 @@
           </div>
   </div>
 </section>
-
-
   <section id="kontakt">
     <div class="container">
       <h2>Kontakt</h2>
@@ -306,16 +296,13 @@
     Facebook Notatki Marty
   </a>
 </p>
-
   <p class="muted">Najwygodniej: przez stronę FB lub e-mail.</p>
 </div>
     </div>
   </section>
-
   <div class="container foot">
     <div>Pediatra na fali • © 2025 • Strona informacyjna</div>
   </div>
-
   <script>
     function copyIBAN(){
       const el = document.createElement('textarea');
