--- a/index.html
+++ b/index.html
@@ -269,7 +269,17 @@
         <div class="author">Marcin</div>
       </div>
     </div>
+    <!-- 4) Marta -->
+<div class="testi">
+  <p class="q"><span class="quote-mark">❝</span>Bardzo polecam 🙂 bez tego nie wyobrażam sobie zdawania PESu z pediatrii. Świetna robota 🙂</p>
+  <div class="author">Marta</div>
+</div>
 
+<!-- 5) Kinga -->
+<div class="testi">
+  <p class="q"><span class="quote-mark">❝</span>Bardzo przydatne notatki — szybka powtórka i nauka. Polecam. PS. Pediatria zdana.</p>
+  <div class="author">Kinga</div>
+</div>
     <!-- 4) Dłuższa opinia: Łukasz -->
     <div class="card" style="margin-top:16px">
       <p class="q"><span class="quote-mark">❝</span><strong>Notatki</strong>-mistrzowski wyciąg pod egzamin,
