--- a/index.html
+++ b/index.html
@@ -271,13 +271,13 @@
     </div>
     <!-- 4) Marta -->
 <div class="testi">
-  <p class="q"><span class="quote-mark">❝</span>Bardzo polecam 🙂 bez tego nie wyobrażam sobie zdawania PESu z pediatrii. Świetna robota 🙂</p>
+  <p class="q"><span class="quote-mark">❝</span>Bardzo polecam🙂 Bez tego nie wyobrażam sobie zdawania PESu z pediatrii. Świetna robota🙂</p>
   <div class="author">Marta</div>
 </div>
 
 <!-- 5) Kinga -->
 <div class="testi">
-  <p class="q"><span class="quote-mark">❝</span>Bardzo przydatne notatki — szybka powtórka i nauka. Polecam. PS. Pediatria zdana.</p>
+  <p class="q"><span class="quote-mark">❝</span>Bardzo przydatne notatki-szybka powtórka i nauka. Polecam. Pediatria zdana.</p>
   <div class="author">Kinga</div>
 </div>
     <!-- 4) Dłuższa opinia: Łukasz -->
