--- a/index.html
+++ b/index.html
@@ -246,40 +246,43 @@
   <div class="container">
     <h2>Opinie lekarzy</h2>
     <p class="opinie-sub">Wybrane wiadomości od osób, które korzystały z Notatek, Testów i Aplikacji.</p>
-    <div class="testi-grid">
-      <!-- 1) Anna -->
-      <div class="testi">
-        <p class="q"><span class="quote-mark">❝</span>Super, że to rozwijacie. To bardzo pomocna inicjatywa.
-        Dla mnie najbardziej pomocne były <strong>Notatki</strong>, które stanowiły zwięzły skrót treści z podręcznika.
-        Z pytań testowych też korzystałam.</p>
-        <div class="author">Anna</div>
-      </div>
-      
-      <!-- 2) Sami -->
-      <div class="testi">
-        <p class="q"><span class="quote-mark">❝</span>Materiały okazały się bardzo pomocne-dzięki nim pomyślnie
-        zdałem egzamin PES. Dziękuję i życzę dalszych sukcesów!(Strona polajkowana😊)</p>
-        <div class="author">Sami</div>
-      </div>
+<div class="testi-grid">
+  <!-- 1) Anna -->
+  <div class="testi">
+    <p class="q"><span class="quote-mark">❝</span>Super, że to rozwijacie. To bardzo pomocna inicjatywa.
+    Dla mnie najbardziej pomocne były <strong>Notatki</strong>, które stanowiły zwięzły skrót treści z podręcznika.
+    Z pytań testowych też korzystałam.</p>
+    <div class="author">Anna</div>
+  </div>
 
-      <!-- 3) Marcin -->
-      <div class="testi">
-        <p class="q"><span class="quote-mark">❝</span>Zdawałem 2 lata temu-<strong>Twoje materiały były absolutnie nieocenione</strong>
-        i polecam je wszystkim młodszym kolegom. Dzięki!</p>
-        <div class="author">Marcin</div>
-      </div>
-    </div>
-    <!-- 4) Marta -->
-<div class="testi">
-  <p class="q"><span class="quote-mark">❝</span>Bardzo polecam🙂 Bez tego nie wyobrażam sobie zdawania PESu z pediatrii. Świetna robota🙂</p>
-  <div class="author">Marta</div>
+  <!-- 2) Sami -->
+  <div class="testi">
+    <p class="q"><span class="quote-mark">❝</span>Materiały okazały się bardzo pomocne-dzięki nim pomyślnie
+    zdałem egzamin PES. Dziękuję i życzę dalszych sukcesów! (Strona polajkowana😊)</p>
+    <div class="author">Sami</div>
+  </div>
+
+  <!-- 3) Marcin -->
+  <div class="testi">
+    <p class="q"><span class="quote-mark">❝</span>Zdawałem 2 lata temu-<strong>Twoje materiały były absolutnie nieocenione</strong>
+    i polecam je wszystkim młodszym kolegom. Dzięki!</p>
+    <div class="author">Marcin</div>
+  </div>
+
+  <!-- 4) Marta -->
+  <div class="testi">
+    <p class="q"><span class="quote-mark">❝</span>Bardzo polecam🙂 Bez tego nie wyobrażam sobie zdawania PESu z pediatrii.
+    Świetna robota🙂</p>
+    <div class="author">Marta</div>
+  </div>
+
+  <!-- 5) Kinga -->
+  <div class="testi">
+    <p class="q"><span class="quote-mark">❝</span>Bardzo przydatne notatki-szybka powtórka i nauka. Polecam. Pediatria zdana.</p>
+    <div class="author">Kinga</div>
+  </div>
 </div>
 
-<!-- 5) Kinga -->
-<div class="testi">
-  <p class="q"><span class="quote-mark">❝</span>Bardzo przydatne notatki-szybka powtórka i nauka. Polecam. Pediatria zdana.</p>
-  <div class="author">Kinga</div>
-</div>
     <!-- 4) Dłuższa opinia: Łukasz -->
     <div class="card" style="margin-top:16px">
       <p class="q"><span class="quote-mark">❝</span><strong>Notatki</strong>-mistrzowski wyciąg pod egzamin,
