--- a/index.html
+++ b/index.html
@@ -282,6 +282,21 @@
     <div class="author">Kinga</div>
   </div>
 </div>
+    <div class="testi-grid">
+  ... (Twoje dotychczasowe kafelki)
+
+  <!-- 6) Anna (rzadkie choroby/objawy) -->
+  <div class="testi">
+    <p class="q"><span class="quote-mark">❝</span>Notatki — świetna rzecz do wyszukiwania rzadkich chorób i objawów. Pamiętam, co gdzie było.</p>
+    <div class="author">Anna</div>
+  </div>
+
+  <!-- 7) Joanna (zwolnienie z ustnego) -->
+  <div class="testi">
+    <p class="q"><span class="quote-mark">❝</span>Przerobiłam Notatki od deski do deski. Wynik — zwolnienie z ustnego. Zdałam na dobry.</p>
+    <div class="author">Joanna</div>
+  </div>
+</div>
 
     <!-- 4) Dłuższa opinia: Łukasz -->
     <div class="card" style="margin-top:16px">
