--- a/index.html
+++ b/index.html
@@ -257,32 +257,31 @@
 
   <!-- 2) Sami -->
   <div class="testi">
-    <p class="q"><span class="quote-mark">❝</span>Materiały okazały się bardzo pomocne-dzięki nim pomyślnie
-    zdałem egzamin PES. Dziękuję i życzę dalszych sukcesów! (Strona polajkowana😊)</p>
+    <p class="q"><span class="quote-mark">❝</span>Materiały okazały się bardzo pomocne — dzięki nim pomyślnie
+    zdałem egzamin PES. Dziękuję i życzę dalszych sukcesów! (Strona polajkowana 😊)</p>
     <div class="author">Sami</div>
   </div>
 
   <!-- 3) Marcin -->
   <div class="testi">
-    <p class="q"><span class="quote-mark">❝</span>Zdawałem 2 lata temu-<strong>Twoje materiały były absolutnie nieocenione</strong>
+    <p class="q"><span class="quote-mark">❝</span>Zdawałem 2 lata temu — <strong>Twoje materiały były absolutnie nieocenione</strong>
     i polecam je wszystkim młodszym kolegom. Dzięki!</p>
     <div class="author">Marcin</div>
   </div>
 
   <!-- 4) Marta -->
   <div class="testi">
-    <p class="q"><span class="quote-mark">❝</span>Bardzo polecam🙂 Bez tego nie wyobrażam sobie zdawania PESu z pediatrii.
-    Świetna robota🙂</p>
+    <p class="q"><span class="quote-mark">❝</span>Bardzo polecam 🙂 Bez tego nie wyobrażam sobie zdawania PESu z pediatrii.
+    Świetna robota 🙂</p>
     <div class="author">Marta</div>
   </div>
 
   <!-- 5) Kinga -->
   <div class="testi">
-    <p class="q"><span class="quote-mark">❝</span>Bardzo przydatne notatki-szybka powtórka i nauka. Polecam. Pediatria zdana.</p>
+    <p class="q"><span class="quote-mark">❝</span>Bardzo przydatne Notatki — szybka powtórka i nauka. Polecam. Pediatria zdana.</p>
     <div class="author">Kinga</div>
   </div>
-</div>
-    
+
   <!-- 6) Anna (rzadkie choroby/objawy) -->
   <div class="testi">
     <p class="q"><span class="quote-mark">❝</span>Notatki — świetna rzecz do wyszukiwania rzadkich chorób i objawów. Pamiętam, co gdzie było.</p>
@@ -295,8 +294,6 @@
     <div class="author">Joanna</div>
   </div>
 </div>
-     <div class="testi-grid">
-
     <!-- 4) Dłuższa opinia: Łukasz -->
     <div class="card" style="margin-top:16px">
       <p class="q"><span class="quote-mark">❝</span><strong>Notatki</strong>-mistrzowski wyciąg pod egzamin,
