--- a/index.html
+++ b/index.html
@@ -257,40 +257,40 @@
 
   <!-- 2) Sami -->
   <div class="testi">
-    <p class="q"><span class="quote-mark">❝</span>Materiały okazały się bardzo pomocne — dzięki nim pomyślnie
-    zdałem egzamin PES. Dziękuję i życzę dalszych sukcesów! (Strona polajkowana 😊)</p>
+    <p class="q"><span class="quote-mark">❝</span>Materiały okazały się bardzo pomocne-dzięki nim pomyślnie
+    zdałem egzamin PES. Dziękuję i życzę dalszych sukcesów! (Strona polajkowana😊)</p>
     <div class="author">Sami</div>
   </div>
 
   <!-- 3) Marcin -->
   <div class="testi">
-    <p class="q"><span class="quote-mark">❝</span>Zdawałem 2 lata temu — <strong>Twoje materiały były absolutnie nieocenione</strong>
+    <p class="q"><span class="quote-mark">❝</span>Zdawałem 2 lata temu-<strong>Twoje materiały były absolutnie nieocenione</strong>
     i polecam je wszystkim młodszym kolegom. Dzięki!</p>
     <div class="author">Marcin</div>
   </div>
 
   <!-- 4) Marta -->
   <div class="testi">
-    <p class="q"><span class="quote-mark">❝</span>Bardzo polecam 🙂 Bez tego nie wyobrażam sobie zdawania PESu z pediatrii.
-    Świetna robota 🙂</p>
+    <p class="q"><span class="quote-mark">❝</span>Bardzo polecam🙂 Bez tego nie wyobrażam sobie zdawania PESu z pediatrii.
+    Świetna robota🙂</p>
     <div class="author">Marta</div>
   </div>
 
   <!-- 5) Kinga -->
   <div class="testi">
-    <p class="q"><span class="quote-mark">❝</span>Bardzo przydatne Notatki — szybka powtórka i nauka. Polecam. Pediatria zdana.</p>
+    <p class="q"><span class="quote-mark">❝</span>Bardzo przydatne Notatki-szybka powtórka i nauka. Polecam. Pediatria zdana.</p>
     <div class="author">Kinga</div>
   </div>
 
   <!-- 6) Anna (rzadkie choroby/objawy) -->
   <div class="testi">
-    <p class="q"><span class="quote-mark">❝</span>Notatki — świetna rzecz do wyszukiwania rzadkich chorób i objawów. Pamiętam, co gdzie było.</p>
+    <p class="q"><span class="quote-mark">❝</span>Notatki-świetna rzecz do wyszukiwania rzadkich chorób i objawów. Pamiętam, co gdzie było.</p>
     <div class="author">Anna</div>
   </div>
 
   <!-- 7) Joanna (zwolnienie z ustnego) -->
   <div class="testi">
-    <p class="q"><span class="quote-mark">❝</span>Przerobiłam Notatki od deski do deski. Wynik — zwolnienie z ustnego. Zdałam na dobry.</p>
+    <p class="q"><span class="quote-mark">❝</span>Przerobiłam Notatki od deski do deski. Wynik-zwolnienie z ustnego. Zdałam na dobry.</p>
     <div class="author">Joanna</div>
   </div>
 </div>
